# KZevent

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
examples/: CMakeLists.txt  pressure_example.cpp  tcp_example.cpp  timer_example.cpp  udp_example.cpp  udp_multicast_example.cpp  unix_example.cpp
include/: core.hpp  log.hpp  sys_error.hpp
include/kzevent/: core.hpp  log.hpp  stream_buffer.hpp  sys_error.hpp
include/kzevent/net/: inet.hpp  tcp_socket.hpp  udp_socket.hpp  unix_socket.hpp
include/kzevent/timer/: timer.hpp
src/: CMakeLists.txt  core.cpp  log.cpp  stream_buffer.cpp
src/net/: inet.cpp  tcp_socket.cpp  udp_socket.cpp  unix_socket.cpp
src/timer/: timer.cpp
tests/: CMakeLists.txt  core_test.cpp  log_test.cpp
tests/net_tests/: tcp_socket_test.cpp  udp_socket_test.cpp
tests/timer_tests/: timer_test.cpp
